generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ── Shared ──────────────────────────────────────────────────────────

// Single source of truth for "where is the shop" — pickup/delivery fees
// must be computed as distance FROM this address, not whatever ad-hoc
// origin the booking flow was using before (that's what made the fee
// skewed). One row per venture that does pickup/delivery.
model ShopLocation {
  id      String  @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture Venture @unique
  name    String
  address String
  lat     Decimal? @db.Decimal(9, 6)
  lng     Decimal? @db.Decimal(9, 6)

  @@map("shop_location")
}

// Weekly recurring pickup availability (Calendrier) — no specific dates.
// Set once (e.g. "Tuesdays 2-5pm, Thursdays 10am-1pm") and it repeats
// every week; customers pick a slot from whatever's marked active.
// Deliberately NOT date-based — that was the old model being replaced.
enum Weekday {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

model AvailabilitySlot {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture   Venture
  weekday   Weekday
  startTime String   @map("start_time") @db.VarChar(5) // "HH:MM", 24h
  endTime   String   @map("end_time") @db.VarChar(5)
  active    Boolean  @default(true)
  notes     String?
  createdAt DateTime @default(now()) @map("created_at")

  @@map("availability_slot")
}

enum Venture {
  LE_SHOE_SHOP
  CUIR_ESTHETICA
  LIONS_BASKETBALL
  SHARED_WORKSPACE
}

model Subcontractor {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture    Venture
  name       String
  email      String?
  phone      String?
  commission Decimal? @db.Decimal(5, 2) // percentage
  orders     Order[]  @relation("SubcontractorRuns")
  invoices   SubcontractorInvoice[]
  createdAt  DateTime @default(now()) @map("created_at")

  @@map("subcontractor")
}

// Subcontractors (Neil, coaches, media team, etc.) are contractors, not
// employees — they submit an invoice for work done; the owner approves
// and pays it. Mirrors the "Invoice #100 — Coach Felix" style entries
// already used informally in the Lions Notion ledger, generalized so any
// subcontractor across any venture can submit one the same way.
//
// kmDriven/kmRate are for the subcontractor's OWN income tax records
// (self-employed mileage deduction) — logging it here doesn't mean
// Le Shoe Shop pays for it; `amount` is the only figure that gets paid.

enum InvoiceStatus {
  SUBMITTED
  APPROVED
  REJECTED
  PAID
}

model SubcontractorInvoice {
  id              String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  subcontractor   Subcontractor @relation(fields: [subcontractorId], references: [id])
  subcontractorId String        @map("subcontractor_id") @db.Uuid
  venture         Venture
  invoiceNumber   String        @map("invoice_number")
  issuedOn        DateTime      @map("issued_on") @db.Date
  amount          Decimal       @db.Decimal(10, 2) // what Le Shoe Shop actually pays — km is NOT assumed to be included
  kmDriven        Decimal?      @map("km_driven") @db.Decimal(8, 2) // for the subcontractor's own records — CRA/RQ self-employment mileage deduction, not necessarily billed here
  kmRate          Decimal?      @map("km_rate") @db.Decimal(6, 3) // $/km reference rate, e.g. the CRA per-km rate, for their own deduction math
  description     String? // what work/service this covers
  attachmentPath  String?       @map("attachment_path") // Supabase Storage path — the actual invoice file, one copy both sides can retrieve
  status          InvoiceStatus @default(SUBMITTED)
  submittedAt     DateTime      @default(now()) @map("submitted_at")
  approvedAt      DateTime?     @map("approved_at")
  paidAt          DateTime?     @map("paid_at")
  rejectionReason String?       @map("rejection_reason")
  notes           String?
  createdAt       DateTime      @default(now()) @map("created_at")

  @@unique([subcontractorId, invoiceNumber])
  @@index([venture, status])
  @@map("subcontractor_invoice")
}

// ── Sales domain ────────────────────────────────────────────────────

enum ServiceTier {
  REFRESH
  RESET
  RENEW
}

enum OrderStatus {
  PENDING
  DEPOSIT_PAID
  IN_PROGRESS
  CLEANED
  DELIVERED
  PAID
  CANCELLED
}

model Customer {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture   Venture
  name      String
  email     String?
  phone     String?
  address   String?
  orders    Order[]
  productOrders ProductOrder[]
  createdAt DateTime @default(now()) @map("created_at")

  @@map("customer")
}

model Order {
  id         String      @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture    Venture
  customer   Customer    @relation(fields: [customerId], references: [id])
  customerId String      @map("customer_id") @db.Uuid
  tier       ServiceTier
  pairCount  Int         @default(1) @map("pair_count")
  status     OrderStatus @default(PENDING)

  pickupDistanceKm Decimal? @map("pickup_distance_km") @db.Decimal(5, 2)
  pickupFee        Decimal  @default(0) @map("pickup_fee") @db.Decimal(6, 2)

  runner   Subcontractor? @relation("SubcontractorRuns", fields: [runnerId], references: [id])
  runnerId String?        @map("runner_id") @db.Uuid

  referralSource String? @map("referral_source")

  campaign   Campaign? @relation(fields: [campaignId], references: [id])
  campaignId String?   @map("campaign_id") @db.Uuid

  notes String? // delivery specifications/instructions — visible to deliverers, no $ involved
  pickupScheduledAt DateTime? @map("pickup_scheduled_at") // the actual date+time picked, resolved against an AvailabilitySlot

  subtotal          Decimal @db.Decimal(8, 2)
  volumeDiscountPct Decimal @default(0) @map("volume_discount_pct") @db.Decimal(4, 2)
  tps               Decimal @db.Decimal(8, 2) // 5%, formula-derived — don't hardcode
  tvq               Decimal @db.Decimal(8, 2) // 9.975%, formula-derived — don't hardcode
  total             Decimal @db.Decimal(8, 2)

  items    OrderItem[]
  payments Payment[]

  bookedAt      DateTime  @default(now()) @map("booked_at")
  depositPaidAt DateTime? @map("deposit_paid_at")
  cleanedAt     DateTime? @map("cleaned_at")
  deliveredAt   DateTime? @map("delivered_at")
  paidAt        DateTime? @map("paid_at")

  @@index([venture, tier, bookedAt])
  @@map("order")
}

enum OrderItemType {
  ADDON
  PRODUCT
}

model OrderItem {
  id        String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  order     Order         @relation(fields: [orderId], references: [id])
  orderId   String        @map("order_id") @db.Uuid
  type      OrderItemType
  code      String // e.g. extra_laces, insoles, sole_repair, or Product.sku
  product   Product?      @relation(fields: [productId], references: [id])
  productId String?       @map("product_id") @db.Uuid
  quantity  Int           @default(1)
  price     Decimal       @db.Decimal(8, 2)

  @@map("order_item")
}

model Product {
  id                 String              @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture            Venture
  sku                String              @unique
  name               String
  price              Decimal             @db.Decimal(8, 2)
  category           String
  orderItems         OrderItem[]
  productOrderItems  ProductOrderItem[]

  @@map("product")
}

// Standalone product sales (admin's "Commandes" tab) — someone buying a
// cleaner/pack/laces with no cleaning service booked. Deliberately NOT
// modeled as an Order: Order requires a ServiceTier and pairCount that
// don't apply here, and forcing it in would mean nullable fields that
// are meaningless most of the time. This is the "Bookings" (Order) tab's
// sibling, not a variant of it.

enum ProductOrderStatus {
  PENDING
  PAID
  FULFILLED
  CANCELLED
}

model ProductOrder {
  id         String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture    Venture
  customer   Customer           @relation(fields: [customerId], references: [id])
  customerId String             @map("customer_id") @db.Uuid
  status     ProductOrderStatus @default(PENDING)
  items      ProductOrderItem[]
  subtotal   Decimal            @db.Decimal(8, 2)
  tps        Decimal            @db.Decimal(8, 2)
  tvq        Decimal            @db.Decimal(8, 2)
  total      Decimal            @db.Decimal(8, 2)
  orderedAt  DateTime           @default(now()) @map("ordered_at")
  paidAt     DateTime?          @map("paid_at")
  fulfilledAt DateTime?         @map("fulfilled_at")

  @@map("product_order")
}

model ProductOrderItem {
  id             String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  productOrder   ProductOrder @relation(fields: [productOrderId], references: [id])
  productOrderId String       @map("product_order_id") @db.Uuid
  product        Product      @relation(fields: [productId], references: [id])
  productId      String       @map("product_id") @db.Uuid
  quantity       Int          @default(1)
  price          Decimal      @db.Decimal(8, 2)

  @@map("product_order_item")
}

enum PaymentKind {
  DEPOSIT
  BALANCE
  FULL
}

model Payment {
  id              String      @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  order           Order       @relation(fields: [orderId], references: [id])
  orderId         String      @map("order_id") @db.Uuid
  kind            PaymentKind
  amount          Decimal     @db.Decimal(8, 2)
  stripePaymentId String?     @map("stripe_payment_id")
  paidAt          DateTime    @default(now()) @map("paid_at")

  @@map("payment")
}

// ── Payables domain ─────────────────────────────────────────────────

enum PayableStatus {
  PLANNED
  PO_ISSUED
  AWAITING_DELIVERY
  RECEIVED
  PAID
}

model Vendor {
  id             String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture        Venture
  name           String
  contact        String?
  currency       String          @default("CAD") // e.g. CNY for equipment vendors — never assume CAD
  leadTimeDays   Int?            @map("lead_time_days")
  purchaseOrders PurchaseOrder[]
  stockItems     StockItem[]

  @@map("vendor")
}

model Requisition {
  id              String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture         Venture
  stockItem       StockItem?     @relation(fields: [stockItemId], references: [id])
  stockItemId     String?        @map("stock_item_id") @db.Uuid
  description     String
  quantity        Decimal        @db.Decimal(8, 2)
  requestedBy     String?        @map("requested_by")
  purchaseOrder   PurchaseOrder? @relation(fields: [purchaseOrderId], references: [id])
  purchaseOrderId String?        @map("purchase_order_id") @db.Uuid
  createdAt       DateTime       @default(now()) @map("created_at")

  @@map("requisition")
}

model PurchaseOrder {
  id           String              @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture      Venture
  vendor       Vendor              @relation(fields: [vendorId], references: [id])
  vendorId     String              @map("vendor_id") @db.Uuid
  status       PayableStatus       @default(PLANNED)
  currency     String              @default("CAD")
  issuedAt     DateTime?           @map("issued_at")
  expectedAt   DateTime?           @map("expected_at")
  receivedAt   DateTime?           @map("received_at")
  requisitions Requisition[]
  items        PurchaseOrderItem[]
  payable      Payable?

  @@map("purchase_order")
}

model PurchaseOrderItem {
  id              String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  purchaseOrder   PurchaseOrder @relation(fields: [purchaseOrderId], references: [id])
  purchaseOrderId String        @map("purchase_order_id") @db.Uuid
  stockItem       StockItem?    @relation(fields: [stockItemId], references: [id])
  stockItemId     String?       @map("stock_item_id") @db.Uuid
  description     String
  quantityUnits   Decimal?      @map("quantity_units") @db.Decimal(10, 2) // e.g. pairs, bottles
  quantityLiters  Decimal?      @map("quantity_liters") @db.Decimal(10, 2) // e.g. 40L leather product orders
  unitPrice       Decimal       @map("unit_price") @db.Decimal(10, 2)

  @@map("purchase_order_item")
}

model Payable {
  id              String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  purchaseOrder   PurchaseOrder @relation(fields: [purchaseOrderId], references: [id])
  purchaseOrderId String        @unique @map("purchase_order_id") @db.Uuid
  amount          Decimal       @db.Decimal(10, 2)
  currency        String        @default("CAD")
  status          PayableStatus @default(PLANNED)
  dueAt           DateTime?     @map("due_at")
  paidAt          DateTime?     @map("paid_at")

  @@map("payable")
}

// ── Stock / par levels ──────────────────────────────────────────────
// Par level = floor to reorder at, independent of demand forecasting.
// currentQty is nudged by whatever counting process you actually run
// (weekly walk-through, or decremented from OrderItem/tier consumption
// once that's worth automating). tiersConsumedBy documents which
// ServiceTiers draw down this item, so par levels can be recalculated
// straight from Order.tier volume once a few weeks of real data exist —
// no manual usage tracking required in the meantime.

model StockItem {
  id                 String              @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture            Venture
  name               String
  category           String
  unit               String // "pairs", "bottles", "units"
  parLevel           Decimal             @map("par_level") @db.Decimal(10, 2)
  currentQty         Decimal             @default(0) @map("current_qty") @db.Decimal(10, 2)
  tiersConsumedBy    ServiceTier[]       @map("tiers_consumed_by") // empty = used by all tiers
  vendor             Vendor?             @relation(fields: [vendorId], references: [id])
  vendorId           String?             @map("vendor_id") @db.Uuid
  leadTimeDays       Int?                @map("lead_time_days")
  requisitions       Requisition[]
  purchaseOrderItems PurchaseOrderItem[]
  updatedAt          DateTime            @updatedAt @map("updated_at")

  @@index([venture, currentQty])
  @@map("stock_item")
}

// ── Expense reconciliation ───────────────────────────────────────────
// Mirrors the informal "Dépenses / Payables" Notion ledger, plus the
// two fields that ledger never had: which pocket the money actually
// came from (paymentSource), and whether the owner has been paid back
// for a personally-funded purchase (reimbursed).

enum PaymentSource {
  BUSINESS_ACCOUNT
  PERSONAL_DEBIT
  PERSONAL_CREDIT
  CASH
  TRANSFER
}

enum DeductibleStatus {
  YES
  NO
  PARTIAL
}

model Expense {
  id            String            @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture       Venture
  description   String
  category      String
  spentOn       DateTime          @map("spent_on") @db.Date
  amountHT      Decimal           @map("amount_ht") @db.Decimal(10, 2)
  tps           Decimal           @default(0) @db.Decimal(10, 2)
  tvq           Decimal           @default(0) @db.Decimal(10, 2)
  totalPaid     Decimal           @map("total_paid") @db.Decimal(10, 2)
  vendor        String?
  paymentSource PaymentSource     @map("payment_source")
  deductible    DeductibleStatus?
  reimbursed    Boolean           @default(false)
  reimbursedAt  DateTime?         @map("reimbursed_at")
  game          Game?             @relation(fields: [gameId], references: [id])
  gameId        String?           @map("game_id") @db.Uuid
  notes         String?
  createdAt     DateTime          @default(now()) @map("created_at")

  @@index([venture, reimbursed])
  @@map("expense")
}

// Money that crosses venture lines (e.g. Lions -> Le Shoe Shop) needs
// to be recorded once and mirrored on both sides' books, not left as
// a single unmatched row on whichever side happened to log it.
model InterVentureTransfer {
  id            String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  fromVenture   Venture  @map("from_venture")
  toVenture     Venture  @map("to_venture")
  amount        Decimal  @db.Decimal(10, 2)
  transferredOn DateTime @map("transferred_on") @db.Date
  reason        String?
  createdAt     DateTime @default(now()) @map("created_at")

  @@map("inter_venture_transfer")
}

// The reverse of Expense: money the OWNER took out of a venture's account
// (a cash flush, a withdrawal) that they intend to pay back or reinvest —
// a personal debt to the business, not a business debt to the owner.
// amountAccountedFor + notes track partial reconciliation honestly instead
// of forcing a number that isn't actually known yet.
model OwnerLoan {
  id                  String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture             Venture // the venture the money was taken from
  amount              Decimal   @db.Decimal(10, 2) // total taken
  amountAccountedFor  Decimal   @default(0) @map("amount_accounted_for") @db.Decimal(10, 2) // spent on the venture's behalf or repaid so far
  takenOn             DateTime  @map("taken_on") @db.Date
  reason              String?
  repaid              Boolean   @default(false)
  repaidAt            DateTime? @map("repaid_at")
  notes               String?
  createdAt           DateTime  @default(now()) @map("created_at")

  @@map("owner_loan")
}

// ── Sponsorship ───────────────────────────────────────────────────────
// Le Shoe Shop sponsoring Lions Basketball (or any other cross-venture
// sponsorship) is money flowing with terms attached — not a bare
// transfer. Deliverables and reach snapshots are what turn "we paid
// $X" into something you can actually justify to yourself or anyone
// else later, instead of just a Payment record with no context.

enum SponsorshipStatus {
  PROPOSED
  ACTIVE
  COMPLETED
  CANCELLED
}

model SponsorshipDeal {
  id               String            @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  sponsorVenture   Venture           @map("sponsor_venture") // who's paying, e.g. LE_SHOE_SHOP
  sponsoredVenture Venture           @map("sponsored_venture") // who's getting paid, e.g. LIONS_BASKETBALL
  name             String
  amount           Decimal           @db.Decimal(10, 2)
  currency         String            @default("CAD")
  startDate        DateTime          @map("start_date") @db.Date
  endDate          DateTime?         @map("end_date") @db.Date
  status           SponsorshipStatus @default(PROPOSED)
  paid             Boolean           @default(false)
  paidAt           DateTime?         @map("paid_at")
  brandingLine     String?           @map("branding_line") // e.g. "Lions Basketball powered by Le Shoe Shop"
  notes            String?
  deliverables     SponsorshipDeliverable[]
  reachSnapshots   SponsorshipReachSnapshot[]
  campaigns        Campaign[]
  games            Game[]
  createdAt        DateTime          @default(now()) @map("created_at")

  @@index([sponsorVenture, sponsoredVenture, status])
  @@map("sponsorship_deal")
}

model SponsorshipDeliverable {
  id          String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  deal        SponsorshipDeal  @relation(fields: [dealId], references: [id])
  dealId      String           @map("deal_id") @db.Uuid
  description String // e.g. "Logo on jersey", "2 Instagram posts/month", "Shoutout in game-recap videos"
  dueDate     DateTime?        @map("due_date") @db.Date
  completed   Boolean          @default(false)
  completedAt DateTime?        @map("completed_at")

  @@map("sponsorship_deliverable")
}

// A point-in-time reach number (e.g. "42K unique viewers / 300K views
// over the last 3 months") tied to the deal it justifies — lets you
// show real numbers behind the sponsorship instead of a vague "Lions
// has a big following" claim.
model SponsorshipReachSnapshot {
  id            String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  deal          SponsorshipDeal @relation(fields: [dealId], references: [id])
  dealId        String          @map("deal_id") @db.Uuid
  periodStart   DateTime        @map("period_start") @db.Date
  periodEnd     DateTime        @map("period_end") @db.Date
  uniqueViewers Int?            @map("unique_viewers")
  totalViews    Int?            @map("total_views")
  source        String? // e.g. "Instagram / SSVSN Media"
  notes         String?
  createdAt     DateTime        @default(now()) @map("created_at")

  @@map("sponsorship_reach_snapshot")
}

// ── Per-game sponsorship ──────────────────────────────────────────────
// A Game is the actual content-cost unit: what it cost Lions' media
// team to produce content for one game. Sponsoring a Game (covering
// its mediaCost, at sponsorAmount) is what flips brandingIncluded to
// true — everything produced from that game carries the sponsor's
// branding, one row instead of a per-piece negotiation each time.

model Game {
  id                String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture           Venture // e.g. LIONS_BASKETBALL
  description       String // e.g. "vs Cegep Levis", "SLC vs UK Cut"
  playedOn          DateTime         @map("played_on") @db.Date
  mediaCost         Decimal?         @map("media_cost") @db.Decimal(10, 2) // actual cost to produce this game's content
  sponsorshipDeal   SponsorshipDeal? @relation(fields: [sponsorshipDealId], references: [id])
  sponsorshipDealId String?          @map("sponsorship_deal_id") @db.Uuid
  sponsorAmount     Decimal?         @map("sponsor_amount") @db.Decimal(10, 2) // what the sponsor actually covered for this game
  brandingIncluded  Boolean          @default(false) @map("branding_included")
  expenses          Expense[]
  notes             String?
  createdAt         DateTime         @default(now()) @map("created_at")

  @@index([venture, playedOn])
  @@map("game")
}

// ── Marketing attribution ─────────────────────────────────────────────
// Last-touch attribution only (a single campaignId per Order) — enough
// to start with given the current manual bit.ly + Notion tracking.
// A Campaign can optionally point at the SponsorshipDeal that funds it,
// so a Shoe Shop order that came from Lions content is traceable back
// to the sponsorship that produced it, not just a free-text label.

enum CampaignChannel {
  META_ADS
  GOOGLE_ADS
  INSTAGRAM_ORGANIC
  SPONSORSHIP
  REFERRAL
  OTHER
}

enum CampaignStatus {
  PLANNED
  ACTIVE
  PAUSED
  ENDED
}

model Campaign {
  id               String            @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  venture          Venture
  channel          CampaignChannel
  name             String
  budget           Decimal?          @db.Decimal(10, 2)
  startDate        DateTime?         @map("start_date") @db.Date
  endDate          DateTime?         @map("end_date") @db.Date
  status           CampaignStatus    @default(PLANNED)
  sponsorshipDeal  SponsorshipDeal?  @relation(fields: [sponsorshipDealId], references: [id])
  sponsorshipDealId String?          @map("sponsorship_deal_id") @db.Uuid
  orders           Order[]
  adSpend          AdSpend[]
  createdAt        DateTime          @default(now()) @map("created_at")

  @@map("campaign")
}

model AdSpend {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  campaign   Campaign @relation(fields: [campaignId], references: [id])
  campaignId String   @map("campaign_id") @db.Uuid
  spentOn    DateTime @map("spent_on") @db.Date
  amount     Decimal  @db.Decimal(10, 2)
  channel    CampaignChannel

  @@map("ad_spend")
}
